Revert "18-10-24 fix match type creation p2"
This reverts commit 9206283634b4a18b7980a59f3dfb9ec714b6b789.